--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -139,7 +139,7 @@
                 </ion-badge>
             </ion-item>
 
-            <ion-item (click)="goCupones()">
+            <ion-item (click)="goCiudades()">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
                 <ion-avatar item-start>
 
