--- a/src/pages/corte-venta/corte-venta.html
+++ b/src/pages/corte-venta/corte-venta.html
@@ -6,6 +6,15 @@
 </ion-header>
 
 <ion-content padding>
+
+    <ion-col col-5>
+        <h2>
+            <b>Master</b>
+            <div class="detalle">Corte de sucursal</div>
+        </h2>
+    </ion-col>
+    <hr>
+
     <form [formGroup]="myForm" (ngSubmit)="saveData()">
         <ion-list>
             <ion-item>
