--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -72,7 +72,7 @@
         </ion-item>
 
         <ion-item>
-            <ion-icon ios="ios-people" md="md-people" item-start style="color: #fcc04d"></ion-icon>
+            <ion-icon ios="ios-body" md="md-body" item-start style="color: #fcc04d"></ion-icon>
             Nombre RP
             <ion-badge item-end>{{ (uidRp | getNameUser | async)?.displayName }}</ion-badge>
         </ion-item>
